--- a/estilo/style.css
+++ b/estilo/style.css
@@ -13,10 +13,11 @@
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
-    min-height: 100%;
+    min-height: 100vh;
     background-color: darkgray;
     font-family: var(--fonte1);
 }
@@ -27,14 +28,14 @@ header {
     text-align: center;
 }
 
-header>h1 {
+header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
     font-size: 10vw;
 }
 
-header>p {
+header > p {
     padding-bottom: 50px;
 }
 
@@ -57,7 +58,7 @@ section {
     font-size: 3.5vw;
 }
 
-section>p {
+section > p {
     padding-bottom: 2em;
 }
 
@@ -69,28 +70,29 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
-    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.457);
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
     background-attachment: fixed;
 }
 
-section.imagem>p {
+section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.516);
+    background-color: rgba(0, 0, 0, 0.514);
     text-shadow: 1px 1px 0px black;
 }
 
 section#img01 {
     background-image: url('../imagens/background001.jpg');
     background-position: right center;
-    background-size: cover;
+    
 }
 
 section#img02 {
     background-image: url('../imagens/background002.jpg');
-    background-position: right center;
-    background-size: cover;
+    
 }
+
 footer {
     background-color: black;
     color: white;
